# s3-rust-noodles-bam

./: .gitignore  Cargo.toml  Dockerfile-provided.al2  FLUKES.md  Makefile  README.md  package-lock.json  package.json  template.yaml  template.yml
deploy/: bam_header.ts  serverless_bioinformatics_stack.ts
src/: lib.rs  main.rs  telemetry.rs
