[package]
name = "s3-rust-noodles-bam"
version = "0.3.0"
authors = ["Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2021"

[dependencies]
bytes = "1"
jemallocator = "0.3"
url = "2"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
lambda_http = { version = "0.5" }
lambda_runtime = { version = "0.5" }
aws-sdk-s3 = { version = "0.9.0" }
aws-config = { version = "0.9.0" }
tracing-subscriber = "0.3"
tokio = { version = "1" }
noodles = { version = "0.21", features = ["bam", "sam"] }

[dev-dependencies]
s3-server = "0.2"

#[profile.release]
#lto = true
#opt-level = 'z'
#codegen-units = 1
