[package]
name = "s3-rust-noodles-bam"
version = "0.4.0"
authors = ["Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2021"

[dependencies]
bytes = "1"
jemallocator = "0.3"
url = "2"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
lambda_http = { version = "0.5" }
lambda_runtime = { version = "0.5" }
tracing = { version = "0.1" }
aws-sdk-s3 = { version = "0.11" }
aws-config = { version = "0.11" }
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.1"
tokio = { version = "1" }
noodles = { version = "0.22", features = ["bam", "sam"] }
noodles-bam = { version = "0.18", features = ["async"] }

[dev-dependencies]
s3-server = "0.2"

#[profile.release]
#lto = true
#opt-level = 'z'
#codegen-units = 1
